--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/navigation.css">
   <!-- icon -->
   <link rel="icon" href="icons/admin.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -28,6 +29,45 @@
     </div> 
   </div>
   <!-- end header  -->
+  
+  <!-- navigation  -->
+  <div class="container-fluid menu-bar">
+    <div class="container">
+      <div class="row">
+        <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 menu">
+          <ul>
+            <li class="btn-menu"><a href="#">
+              <i class="fa-solid fa-bars"></i><span>Menu</span>
+            </a></li>
+            <li><a href="#"><i class="fa-solid fa-house"></i><span>Home</span></a></li>
+            <li><a href="#">
+              <i class="fa-solid fa-person"></i>
+              <span>About</span>
+            </a></li>
+            <li><a href="#">
+              <i class="fa-solid fa-blog"></i>
+              <span>Blogs</span>
+            </a></li>
+            <li><a href="#">
+              <i class="fa-solid fa-newspaper"></i>
+              <span>Article</span>
+            </a></li>
+          </ul>
+          <ul>
+            <li><a href="#">
+              <i class="fa-solid fa-diagram-project"></i>
+              <span>Projects</span>
+            </a></li>
+            <li><a href="#">
+              <i class="fa-solid fa-address-book"></i>
+              <span>Contact</span>
+            </a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- end navigation  -->
   <!-- link js  -->
   <script src="js/script.js"></script>
 </body>
